# talkie

./: .bazelignore  .bazelrc  .gitignore  .pre-commit-config.yaml  .prettierignore  BUILD.bazel  README.md  WORKSPACE  defs.bzl  deps.bzl  gazelle_ci.sh  go.mod  go.sum  packages.go  platforms  tidy.sh
config/: BUILD.bazel
entry/: BUILD.bazel  README.md  client_tmpl  defs.bzl  main.go  server_tmpl
entry/render/: BUILD.bazel  render.go
examples/: .bazelrc  BUILD.bazel  README.md  WORKSPACE  deps.bzl  gazelle_ci.sh  go.mod  go.sum  workspace_status.sh
examples/helloworld/: BUILD.bazel  dummy.go
examples/helloworld/client/: BUILD.bazel  client.go
examples/helloworld/client/mock/: BUILD.bazel  mock_helloworld.go
examples/helloworld/protos/: BUILD.bazel  greeter.proto
examples/helloworld/service/: BUILD.bazel  helloworld.go
examples/helloworld/tests/: BUILD.bazel  smoke_suite_test.go  smoke_test.go
examples/helloworld/tests/testdata/secrets/: redis.url
examples/helloworld_http/: BUILD.bazel  client.go  dummy.go
examples/helloworld_http/client/: BUILD.bazel  client.go
examples/helloworld_http/client/mock/: BUILD.bazel  mock_helloworld_http.go
examples/helloworld_http/protos/: BUILD.bazel  dummy.go  greeter.proto
examples/helloworld_http/service/: BUILD.bazel  helloworld_http.go
examples/helloworld_http/tests/: BUILD.bazel  smoke_suite_test.go  smoke_test.go
generator/: BUILD.bazel  README.md  defs.bzl  main.go
generator/deployment/: BUILD.bazel  k8s_manifest_tmpl  kind_load_images_tmpl
generator/deployment/helm/chart/: .helmignore  BUILD.bazel  Chart.yaml  values.yaml
generator/deployment/helm/chart/templates/: _helpers.tpl  talkie_services.yaml
generator/entrypoints/: BUILD.bazel  client_tmpl  server_tmpl
generator/json/bazel_stamp/: BUILD.bazel  defs.bzl  main.go
generator/proto/parser/: BUILD.bazel  main.go
generator/render/: BUILD.bazel  render.go
generator/renderer/: BUILD.bazel  defs.bzl  main.go
hooks/: license_header
infrastructure/: BUILD.bazel  deps.bzl
logger/: BUILD.bazel  logger.go
protobuf/: BUILD.bazel  write_proto_stubs_to_source.bzl
service/: BUILD.bazel  service.go  service_test.go
service/client/: BUILD.bazel  registry.go
service/lifecycle/: BUILD.bazel  hooks.go
service/logger/: BUILD.bazel  logger.go
service/secrets/: BUILD.bazel  secrets.go
toolchains/: BUILD.bazel
