load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:exclude packages.go
# gazelle:exclude **/dummy.go
# gazelle:prefix aspect.build/talkie
gazelle(name = "gazelle")

gazelle(
    name = "gazelle_update_repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=deps.bzl%go_dependencies",
        "-prune",
    ],
    command = "update-repos",
)

sh_binary(
    name = "tidy",
    srcs = ["tidy.sh"],
)
