load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:exclude packages.go
# gazelle:exclude **/dummy.go
# gazelle:prefix github.com/aspect-build/talkie
gazelle(name = "gazelle")

gazelle(
    name = "gazelle_update_repos",
    args = [
        "-build_file_proto_mode=disable_global",
        "-from_file=go.mod",
        "-to_macro=deps.bzl%go_dependencies",
        "-prune",
    ],
    command = "update-repos",
)

sh_binary(
    name = "tidy",
    srcs = ["tidy.sh"],
)

alias(
    name = "go",
    actual = "@go_sdk//:bin/go",
)
