load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:exclude packages.go
# gazelle:exclude **/dummy.go
# gazelle:prefix github.com/aspect-build/talkie
gazelle(name = "gazelle")

gazelle(
    name = "gazelle_update_repos",
    args = [
        "-build_file_proto_mode=disable_global",
        "-from_file=go.mod",
        "-to_macro=deps.bzl%go_dependencies",
        "-prune",
    ],
    command = "update-repos",
    visibility = ["//:__subpackages__"],
)

sh_binary(
    name = "gazelle.ci",
    srcs = ["gazelle_ci.sh"],
    data = [
        ":gazelle",
        "@go_sdk//:bin/go",
    ],
    env = {
        "GO": "$(rootpath @go_sdk//:bin/go)",
        "GAZELLE": "$(rootpath :gazelle)",
    },
)
