load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

exports_files([
    "client_tmpl",
    "server_tmpl",
])

go_library(
    name = "entry_lib",
    srcs = ["main.go"],
    importpath = "aspect.build/talkie/entry",
    visibility = ["//visibility:private"],
    deps = [
        "//entry/render",
        "@com_github_emicklei_proto//:proto",
    ],
)

go_binary(
    name = "entry",
    embed = [":entry_lib"],
    visibility = ["//visibility:public"],
)
