load("@aspect_talkie//:defs.bzl", "talkie_deployment")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:exclude **/dummy.go
# gazelle:exclude talkie
# gazelle:prefix github.com/aspect-build/talkie/examples
# gazelle:resolve go github.com/aspect-build/talkie/service @aspect_talkie//service
gazelle(name = "gazelle")

gazelle(
    name = "gazelle_update_repos",
    args = [
        "-build_file_proto_mode=disable_global",
        "-from_file=go.mod",
        "-to_macro=deps.bzl%go_dependencies",
        "-prune",
    ],
    command = "update-repos",
)

talkie_deployment(
    name = "examples_deployment",
    services = [
        "//helloworld",
        "//helloworld_http",
    ],
)
