load("@aspect_talkie//:defs.bzl", "talkie_deployment")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:exclude **/dummy.go
# gazelle:exclude talkie
# gazelle:prefix github.com/aspect-build/talkie/examples
# gazelle:resolve go github.com/aspect-build/talkie/service @aspect_talkie//service
# gazelle:resolve go github.com/aspect-build/talkie/service/secrets @aspect_talkie//service/secrets
gazelle(name = "gazelle")

gazelle(
    name = "gazelle_update_repos",
    args = [
        "-build_file_proto_mode=disable_global",
        "-from_file=go.mod",
        "-to_macro=deps.bzl%go_dependencies",
        "-prune",
    ],
    command = "update-repos",
    visibility = ["//:__subpackages__"],
)

sh_binary(
    name = "gazelle.ci",
    srcs = ["gazelle_ci.sh"],
    data = [
        ":gazelle",
        "@go_sdk//:bin/go",
    ],
    env = {
        "GO": "$(rootpath @go_sdk//:bin/go)",
        "GAZELLE": "$(rootpath :gazelle)",
    },
)

talkie_deployment(
    name = "examples",
    services = [
        "//helloworld",
        "//helloworld_http",
    ],
)
