# Copyright 2022 Aspect Build Systems, Inc. All rights reserved.
#
# Original authors: Thulio Ferraz Assis (thulio@aspect.dev)
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@aspect_talkie//:defs.bzl", "talkie_deployment")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:exclude **/dummy.go
# gazelle:exclude talkie
# gazelle:prefix github.com/aspect-build/talkie/examples
# gazelle:resolve go github.com/aspect-build/talkie/service @aspect_talkie//service
# gazelle:resolve go github.com/aspect-build/talkie/service/secrets @aspect_talkie//service/secrets
gazelle(name = "gazelle")

gazelle(
    name = "gazelle_update_repos",
    args = [
        "-build_file_proto_mode=disable_global",
        "-from_file=go.mod",
        "-to_macro=deps.bzl%go_dependencies",
        "-prune",
    ],
    command = "update-repos",
    visibility = ["//:__subpackages__"],
)

sh_binary(
    name = "gazelle.ci",
    srcs = ["gazelle_ci.sh"],
    data = [
        ":gazelle",
        "@go_sdk//:bin/go",
    ],
    env = {
        "GAZELLE": "$(rootpath :gazelle)",
        "GO": "$(rootpath @go_sdk//:bin/go)",
    },
)

talkie_deployment(
    name = "examples",
    services = [
        "//helloworld",
        "//helloworld_http",
    ],
)
