load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

exports_files([
    "client_tmpl",
    "server_tmpl",
])

go_library(
    name = "generator_lib",
    srcs = ["main.go"],
    importpath = "github.com/aspect-build/talkie/generator",
    visibility = ["//visibility:private"],
    deps = [
        "//generator/render",
        "@com_github_emicklei_proto//:proto",
    ],
)

go_binary(
    name = "generator",
    embed = [":generator_lib"],
    visibility = ["//visibility:public"],
)
