alias(
    name = "kubectl",
    actual = select({
        "//platforms/config:macos_aarch64": "@kubectl_macos_aarch64//file:kubectl",
        "//platforms/config:macos_x86_64": "@kubectl_macos_x86_64//file:kubectl",
        "//platforms/config:linux_x86_64": "@kubectl_linux_x86_64//file:kubectl",
    }),
    visibility = ["//visibility:public"],
)
