# Copyright 2022 Aspect Build Systems, Inc. All rights reserved.
#
# Original authors: Thulio Ferraz Assis (thulio@aspect.dev)
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

alias(
    name = "kubectl",
    actual = select({
        "//platforms/config:linux_x86_64": "@kubectl_linux_x86_64//file:kubectl",
        "//platforms/config:macos_aarch64": "@kubectl_macos_aarch64//file:kubectl",
        "//platforms/config:macos_x86_64": "@kubectl_macos_x86_64//file:kubectl",
    }),
    visibility = ["//visibility:public"],
)
