load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "service",
    srcs = ["service.go"],
    importpath = "aspect.build/talkie/service",
    visibility = ["//visibility:public"],
    deps = ["//logger"],
)

go_test(
    name = "service_test",
    srcs = ["service_test.go"],
    deps = [":service"],
)
