load("@aspect_talkie//:defs.bzl", "talkie_service")

# gazelle:resolve go github.com/aspect-build/talkie/examples/helloworld //helloworld:helloworld_client
talkie_service(
    name = "helloworld",
    base_image = "@distroless_base_debian11//image",
    importpath = "github.com/aspect-build/talkie/examples/helloworld",
    service_definition = "//helloworld/protos",
    service_implementation = "//helloworld/service",
    visibility = ["//visibility:public"],
)
