load("@aspect_talkie//:defs.bzl", "talkie_service")

# gazelle:resolve go github.com/aspect-build/talkie/examples/helloworld //helloworld:helloworld_client
talkie_service(
    name = "helloworld_http",
    base_image = "@distroless_base_debian11//image",
    enable_grpc_gateway = True,
    importpath = "github.com/aspect-build/talkie/examples/helloworld_http",
    service_definition = "//helloworld_http/protos",
    service_implementation = "//helloworld_http/service",
    visibility = ["//visibility:public"],
)
