load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@aspect_talkie//:defs.bzl", "talkie_service")

talkie_service(
    name = "helloworld_http_service",
    base_image = "@distroless_base_debian11//image",
    enable_grpc_gateway = True,
    service_definition = "//helloworld_http/protos",
    service_implementation = "//helloworld_http/service",
    visibility = ["//visibility:public"],
)

go_library(
    name = "helloworld_http",
    srcs = ["client.go"],
    importpath = "github.com/aspect-build/talkie/examples/helloworld_http",
    visibility = ["//visibility:public"],
    deps = [
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//credentials/insecure",
    ],
)
