# Copyright 2022 Aspect Build Systems, Inc. All rights reserved.
#
# Original authors: Thulio Ferraz Assis (thulio@aspect.dev)
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "renderer_lib",
    srcs = ["main.go"],
    importpath = "github.com/aspect-build/talkie/generator/renderer",
    visibility = ["//visibility:private"],
    deps = [
        "@cat_dario_mergo//:mergo",
        "@com_github_masterminds_sprig_v3//:sprig",
        "@io_k8s_sigs_yaml//:yaml",
    ],
)

go_binary(
    name = "renderer",
    embed = [":renderer_lib"],
    visibility = ["//visibility:public"],
)
