load("@io_bazel_rules_go//go:def.bzl", "go_test")

filegroup(
    name = "testdata",
    srcs = glob(["testdata/**"]),
)

go_test(
    name = "tests_test",
    srcs = [
        "smoke_suite_test.go",
        "smoke_test.go",
    ],
    data = [
        ":testdata",
        "//helloworld",
    ],
    deps = [
        "//helloworld/client",
        "//helloworld/protos",
        "@com_github_onsi_ginkgo_v2//:ginkgo",
        "@com_github_onsi_gomega//:gomega",
        "@io_bazel_rules_go//go/tools/bazel:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
    ],
)
