load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@aspect_talkie//:defs.bzl", "talkie_client")

talkie_client(
    name = "helloworld_http",
    service = "//helloworld_http",
)

go_library(
    name = "client",
    srcs = ["client.go"],
    importpath = "github.com/aspect-build/talkie/examples/helloworld_http/client",
    visibility = ["//visibility:public"],
    deps = [
        "//helloworld_http/protos",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//balancer/roundrobin",
        "@org_golang_google_grpc//credentials/insecure",
        "@org_golang_google_grpc//resolver",
    ],
)
