# Copyright 2022 Aspect Build Systems, Inc. All rights reserved.
#
# Original authors: Thulio Ferraz Assis (thulio@aspect.dev)
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@aspect_talkie//:defs.bzl", "talkie_client")
load("@io_bazel_rules_go//go:def.bzl", "go_library")

talkie_client(
    name = "helloworld_http",
    service = "//helloworld_http",
)

go_library(
    name = "client",
    srcs = ["client.go"],
    importpath = "github.com/aspect-build/talkie/examples/helloworld_http/client",
    visibility = ["//visibility:public"],
    deps = [
        "//helloworld_http/protos",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//balancer/roundrobin",
        "@org_golang_google_grpc//credentials/insecure",
        "@org_golang_google_grpc//keepalive",
        "@org_golang_google_grpc//resolver",
    ],
)
