load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "parser_lib",
    srcs = ["main.go"],
    importpath = "github.com/aspect-build/talkie/generator/proto/parser",
    visibility = ["//visibility:private"],
    deps = ["@com_github_emicklei_proto//:proto"],
)

go_binary(
    name = "parser",
    embed = [":parser_lib"],
    visibility = ["//visibility:public"],
)
