load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@aspect_talkie//:defs.bzl", "talkie_client_mock")

talkie_client_mock(
    name = "helloworld_http",
    interfaces = ["GreeterClient"],
    service_definition = "//helloworld_http/protos",
)

go_library(
    name = "mock",
    srcs = ["mock_helloworld_http.go"],
    importpath = "github.com/aspect-build/talkie/examples/helloworld_http/client/mock",
    visibility = ["//visibility:public"],
    deps = [
        "//helloworld_http/protos",
        "@com_github_golang_mock//gomock",
        "@org_golang_google_grpc//:go_default_library",
    ],
)
