# Copyright 2022 Aspect Build Systems, Inc. All rights reserved.
#
# Original authors: Thulio Ferraz Assis (thulio@aspect.dev)
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@aspect_talkie//:defs.bzl", "talkie_client_mock")
load("@io_bazel_rules_go//go:def.bzl", "go_library")

talkie_client_mock(
    name = "helloworld_http",
    interfaces = ["GreeterClient"],
    service_definition = "//helloworld_http/protos",
)

go_library(
    name = "mock",
    srcs = ["mock_helloworld_http.go"],
    importpath = "github.com/aspect-build/talkie/examples/helloworld_http/client/mock",
    visibility = ["//visibility:public"],
    deps = [
        "//helloworld_http/protos",
        "@com_github_golang_mock//gomock",
        "@org_golang_google_grpc//:go_default_library",
    ],
)
